# scandeep-defender

./: .gitignore  README.md  generate_icons.py  index.html  package.json  tauri.conf.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.css  App.tsx  LangContext.tsx  Scanner.tsx  i18n.ts  index.html  main.tsx  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  db.rs  file_watcher.rs  main.rs
src-tauri/src/adapters/: clamav.rs  cloudmersive.rs  hybrid_analysis.rs  metadefender.rs  mod.rs  scanner_trait.rs  virustotal.rs
src-tauri/src/commands/: history.rs  mod.rs  quarantine.rs  scan.rs  settings.rs
src-tauri/src/components/: Scanner.tsx
src-tauri/src/engine/: job.rs  mod.rs  pipeline.rs  queue.rs  risk_scoring.rs
src-tauri/src/persistence/: database.rs
src-tauri/src/rate_limiter/: token_bucket.rs
src-tauri/src/security/: crypto.rs  mod.rs  quarantine.rs  rules.rs
src-tauri/src/watcher/: file_watcher.rs  mod.rs  stability_checker.rs
src/components/: History.tsx  Quarantine.tsx  Scan.tsx  Scanner.tsx  Settings.tsx  SplashScreen.tsx
