[package]
name = "scandeep-defender"
version = "1.0.0"
edition = "2021"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde            = { version = "1",    features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1",    features = ["full"] }
reqwest          = { version = "0.12", features = ["json", "multipart"] }
sha2             = "0.10"
rusqlite         = { version = "0.32", features = ["bundled"] }
uuid             = { version = "1",    features = ["v4", "serde"] }
chrono           = { version = "0.4",  features = ["serde"] }
dirs             = "5"
notify           = "6"
