[package]
name    = "scandeep-defender"
version = "2.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2",    features = [] }
tauri-plugin-dialog = "2"
async-trait         = "0.1"
serde               = { version = "1",    features = ["derive"] }
serde_json          = "1"
tokio               = { version = "1",    features = ["full"] }
futures             = "0.3"
reqwest             = { version = "0.12", features = ["json", "multipart"] }
sha2                = "0.10"
rusqlite            = { version = "0.32", features = ["bundled"] }
uuid                = { version = "1",    features = ["v4", "serde"] }
chrono              = { version = "0.4",  features = ["serde"] }
dirs                = "5"
notify              = "6"
open                = "5"
keyring             = "2"
anyhow              = "1"
tracing             = "0.1"
tracing-subscriber  = "0.3"
glob                = "0.3"

[lints.rust]
dead_code = "warn"
